--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-asgiref==3.7.2
+asgiref
 boto3==1.34.4
 botocore==1.34.4
 Django==4.0
@@ -10,4 +10,10 @@ s3transfer==0.9.0
 six==1.16.0
 sqlparse==0.4.4
 tzdata==2023.3
-urllib3==2.0.7
+urllib3==1.26.1
+gunicorn==21.2.0
+psycopg2-binary==2.9.6
+
+
+
+
