--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,16 @@
-asgiref
-boto3==1.34.4
-botocore==1.34.4
-Django==4.0
+asgiref==3.7.2
+boto3==1.34.29
+botocore==1.34.29
+Django==5.0.1
 django-environ==0.11.2
 django-storages==1.14.2
+gunicorn==21.2.0
 jmespath==1.0.1
+packaging==23.2
+psycopg2-binary==2.9.9
 python-dateutil==2.8.2
-s3transfer==0.9.0
+s3transfer==0.10.0
 six==1.16.0
 sqlparse==0.4.4
-tzdata==2023.3
-urllib3==1.26.1
-gunicorn==21.2.0
-psycopg2-binary==2.9.6
-
-
-
-
+tzdata==2023.4
+urllib3==2.0.7
