--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,9 @@ db.sqlite3-journal
 media
 .git/
 migrations/
+.env.web
+.env.prod.pg-admin
+
 # If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
 # in your Git repository. Update and uncomment the following line accordingly.
 # <django-project-name>/staticfiles/
